# ticketflow

./: .env.example  .gitignore  AGENTS.md  AUDIT-REPORT.md  CHANGELOG.md  CLAUDE.md  CONTINUE_AUDIT.md  LICENSE  PERF-REPORT.md  PRIVACY.md  README.md  SECURITY.md  STRUCTURE.md  TESTREFACTO.md  TICKETFLOW_Backlog.example.md  TICKETFLOW_Backlog.md  TODO_AUDIT.md  build-tauri.bat  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tauri-dev.bat  vite.config.ts  vitest.config.ts
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v2.1-MILESTONE-AUDIT.md
.planning/milestones/: v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md  v2.2-MILESTONE-AUDIT.md  v2.2-REQUIREMENTS.md
docs/: AUDIT_REPORT.md  CONTINUE_AUDIT.md  PLAN_ELECTRON.md  POSTAUDIT.md  REFACTORING_PLAN.md  ROADMAP_2026.md  TODO_AUDIT.md  auditinspection.md
e2e/: app.spec.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs  telemetry.rs
src/__tests__/: ItemEditorModal.test.tsx  KanbanBoard.test.tsx  ai-health.test.ts  ai-retry.test.ts  backlogSchemas.test.ts  components.test.tsx  guards.test.ts  itemPlacement.test.ts  otherHooks.test.ts  parser.test.ts  perf-benchmarks.test.ts  persistence.test.ts  screenshots.test.ts  search.test.ts  serializer.test.ts  stress-bulk-search-concurrent.test.ts  stress-crud.test.ts  tauriBridge.test.ts  utils.test.ts  (+9 more)
(+325 files in other folders)
